added improved menu and implemented authorization

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <title>Class Connect</title>
   </head>
   <body>
