--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="app" class="is-black"></div>
+    <div id="app"></div>
   </body>
 </html>
